[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/CardButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 290, 220 )

[node name="PlayerLife" type="Label" parent="Player"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "50/50"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerArmor" type="Label" parent="Player"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 35.0
margin_top = -7.0
margin_right = 55.0
margin_bottom = 7.0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="Sprite" parent="Player"]
position = Vector2( -1, 52 )
texture = ExtResource( 1 )

[node name="Ennemy" type="Node2D" parent="."]
position = Vector2( 750, 220 )

[node name="EnnemyLife" type="Label" parent="Ennemy"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "50/50"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnnemySprite" type="Sprite" parent="Ennemy"]
position = Vector2( 0, 52 )
texture = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardSelectionZone" type="Panel" parent="GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvailableCards" type="Control" parent="GUI/CardSelectionZone"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.5
margin_top = -73.5
margin_right = 270.5
margin_bottom = 73.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardButton" parent="GUI/CardSelectionZone/AvailableCards" instance=ExtResource( 2 )]

[node name="CardButton2" parent="GUI/CardSelectionZone/AvailableCards" instance=ExtResource( 2 )]
margin_left = 110.0
margin_right = 210.0

[node name="CardButton3" parent="GUI/CardSelectionZone/AvailableCards" instance=ExtResource( 2 )]
margin_left = 220.0
margin_right = 320.0

[node name="CardButton4" parent="GUI/CardSelectionZone/AvailableCards" instance=ExtResource( 2 )]
margin_left = 330.0
margin_right = 430.0

[node name="CardButton5" parent="GUI/CardSelectionZone/AvailableCards" instance=ExtResource( 2 )]
margin_left = 440.0
margin_right = 540.0

[node name="PaAmount" type="HBoxContainer" parent="GUI/CardSelectionZone"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaAmountLabel" type="Label" parent="GUI/CardSelectionZone/PaAmount"]
margin_top = 13.0
margin_right = 25.0
margin_bottom = 27.0
text = "PA :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaAmountCount" type="Label" parent="GUI/CardSelectionZone/PaAmount"]
margin_left = 29.0
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GUI/CardSelectionZone"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -10.0
margin_bottom = 10.0
text = "Prochain Tour"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="clicked_card" from="GUI/CardSelectionZone/AvailableCards/CardButton" to="." method="_on_CardButton_clicked_card"]
[connection signal="clicked_card" from="GUI/CardSelectionZone/AvailableCards/CardButton2" to="." method="_on_CardButton_clicked_card"]
[connection signal="clicked_card" from="GUI/CardSelectionZone/AvailableCards/CardButton3" to="." method="_on_CardButton_clicked_card"]
[connection signal="clicked_card" from="GUI/CardSelectionZone/AvailableCards/CardButton4" to="." method="_on_CardButton_clicked_card"]
[connection signal="clicked_card" from="GUI/CardSelectionZone/AvailableCards/CardButton5" to="." method="_on_CardButton_clicked_card"]
[connection signal="pressed" from="GUI/CardSelectionZone/Button" to="." method="_on_Button_pressed"]
